/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.1.1/userguide/tutorial_java_projects.html
 */
buildscript {
    repositories {
        mavenCentral()
        google()
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }
}

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    google()
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'

    // https://mvnrepository.com/artifact/io.projectreactor/reactor-core
    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.4.16'

    // https://mvnrepository.com/artifact/com.azure/azure-messaging-eventhubs
    implementation group: 'com.azure', name: 'azure-messaging-eventhubs', version: '5.18.0'

    // https://mvnrepository.com/artifact/io.reactivex.rxjava3/rxjava
    implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.1.8'
    
    //https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter/5.10.2
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add("--enable-preview")
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

application {
    // Define the main class for the application.
    mainClassName = 'java.playground.App'
}
